--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "@angular/platform-browser": "^12.0.1",
     "@angular/platform-browser-dynamic": "^12.0.1",
     "@angular/router": "^12.0.1",
+    "@capacitor-community/http": "^1.4.1",
     "@capacitor/android": "^4.0.0",
     "@capacitor/camera": "^4.0.0",
     "@capacitor/core": "^4.0.0",
     "@capacitor/filesystem": "^4.0.0",
     "@capacitor/ios": "^4.0.0",
-    "@capacitor/preferences": "^4.0.1",
+    "@capacitor/preferences": "^4.0.2",
     "@capacitor/splash-screen": "^4.0.0",
+    "@ionic-native/network": "^5.36.0",
     "@ionic/angular": "^5.6.7",
     "@ionic/pwa-elements": "^3.0.2",
     "core-js": "^3.6.5",
